--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
+    "nookies": "^2.5.2",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.1.3",
+    "@types/cookie": "^0.5.1",
     "prisma": "^4.9.0"
   }
 }
