Create getGoogleOAuthToken function

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dayjs": "^1.11.7",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "googleapis": "^110.0.0",
     "next": "13.1.6",
     "next-auth": "^4.19.0",
     "nookies": "^2.5.2",
