--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "googleapis": "^110.0.0",
     "next": "13.1.6",
     "next-auth": "^4.19.0",
+    "next-seo": "^5.15.0",
     "nookies": "^2.5.2",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
